--- a/Sports photography/index.html
+++ b/Sports photography/index.html
@@ -9,7 +9,7 @@
 <body>
 <div class="container">
   <div class="header">
-  	<h1>Atlas ECS Portfolio</h1>
+  	<h1>Sports photography</h1>
   </div>
   <div class="nav">
     <h3> <a href="../index.html">Home</a> | <a href="../ecs/index.html">ECS</a> | <a href="index.html">sports photography</a></h3>
