--- a/ecs/index.html
+++ b/ecs/index.html
@@ -9,7 +9,7 @@
 <body>
 <div class="container">
   <div class="header">
-  	<h1> ECS projects </h1>
+  	<h1> ECS Projects </h1>
   </div>
   <div class="nav">
     <h3> <a href="../index.html">Home</a> | <a href="ecs/index.html">ECS</a> | <a href="../Sports photography/index.html">sports photography</a></h3>
