--- a/aboutme.html
+++ b/aboutme.html
@@ -19,8 +19,8 @@
 <h3> Certifications</h3>
   <ol>
 <li>Photographer</li>
-  <li>community of caring</li>
-    <li>Milk</li>
+<li>community of caring</li>
+<li>Drivers License</li>
   </ol>
 </div>
   <div class="footer">
