--- a/ecs/index.html
+++ b/ecs/index.html
@@ -14,7 +14,10 @@
   <div class="nav">
     <h3> <a href="../index.html">Home</a> | <a href="index.html">ECS</a> | <a href="../Sports photography/index.html">sports photography</a></h3>
   </div>
-  <div class="content">Hello World!</div>
+  <div class="content">Hello world!</div>
+<ol>typing results</ol>
+<ol>coding project</ol>
+<ol>certifications</ol>	
   <div class="footer">
     <h4> <a href="../aboutme.html">About Me</a> | Contact | Copyright 2021</h4>
   </div>
