--- a/ecs/index.html
+++ b/ecs/index.html
@@ -19,7 +19,7 @@
 <ol>coding project</ol>
 <ol>certifications</ol>	
   <div class="footer">
-    <h4> <a href="../aboutme.html">About Me</a> | Contact | Copyright 2021</h4>
+    <h4> <a href="../aboutme.html">About Me</a> | <a href="mailto:9685704@graniteschools.org">Contact</a> | Copyright 2021</h4>
   </div>
 </div>
 </body>
