--- a/ecs/index.html
+++ b/ecs/index.html
@@ -15,9 +15,11 @@
     <h3> <a href="../index.html">Home</a> | <a href="index.html">ECS</a> | <a href="../Sports photography/index.html">sports photography</a></h3>
   </div>
   <div class="content">Hello world!</div>
-<ol>typing results</ol>
-<ol>coding project</ol>
-<ol>certifications</ol>	
+<ol>
+	<li>typing results</li>
+	<li>certifications</li>
+	<li>coding projects</li>
+</ol>	
   <div class="footer">
     <h4> <a href="../aboutme.html">About Me</a> | <a href="mailto:9685704@graniteschools.org">Contact</a> | Copyright 2021</h4>
   </div>
