--- a/ecs/index.html
+++ b/ecs/index.html
@@ -14,12 +14,11 @@
   <div class="nav">
     <h3> <a href="../index.html">Home</a> | <a href="index.html">ECS</a> | <a href="../Sports photography/index.html">sports photography</a></h3>
   </div>
-  <div class="content">Hello world!</div>
-<ol>
-	<li>typing results</li>
-	<li>certifications</li>
-	<li>coding projects</li>
-</ol>	
+  <div class="content">Hello world!
+<h3>Typing results</h3>
+<h3>Coding projects</h3>
+<h3>Certifications</h3>
+  </div>
   <div class="footer">
     <h4> <a href="../aboutme.html">About Me</a> | <a href="mailto:9685704@graniteschools.org">Contact</a> | Copyright 2021</h4>
   </div>
