--- a/ecs/index.html
+++ b/ecs/index.html
@@ -16,6 +16,7 @@
   </div>
   <div class="content">Hello world!
 <h3>Typing results</h3>
+	  <img src="../imgaes/typing.png" alt="Typing Test" width="960" >
 <h3>Coding projects</h3>
 <h3>Certifications</h3>
   </div>
