--- a/ecs/index.html
+++ b/ecs/index.html
@@ -14,7 +14,7 @@
   <div class="nav">
     <h3> <a href="../index.html">Home</a> | <a href="index.html">ECS</a> | <a href="../Sports photography/index.html">sports photography</a></h3>
   </div>
-  <div class="content">Hello world!
+  <div class="content">
 <h3>Typing results</h3>
 	  <img src="../imgaes/typing.png" alt="Typing Test" width="960" >
 <h3>Coding projects</h3>
