--- a/ecs/index.html
+++ b/ecs/index.html
@@ -16,7 +16,7 @@
   </div>
   <div class="content">
 <h3>Typing results</h3>
-	  <img src="../imgaes/typing.png" alt="Typing Test" width="960" >
+	  <img src="../images/typing.png" alt="Typing Test" width="960" >
 <h3>Coding projects</h3>
 <h3>Certifications</h3>
   </div>
