--- a/Sports photography/index.html
+++ b/Sports photography/index.html
@@ -14,7 +14,14 @@
   <div class="nav">
     <h3> <a href="../index.html">Home</a> | <a href="../ecs/index.html">ECS</a> | <a href="index.html">sports photography</a></h3>
   </div>
-  <div class="content">Hello World!</div>
+  <div class="content"> <h3>Sports photography</h3>
+  <h2>Acomplishments</h2>
+  <li>I have done photos fro skyline football</li>
+	  
+ <h2>People</h2>
+  <li>I like athletes and seeing really coo pictures of davante adams and anthony edwards</li>
+  
+  </div>
   <div class="footer">
     <h4> <a href="../aboutme.html">About Me</a> | <a href="mailto:9685704@graniteschools.org">Contact</a> | Copyright 2021</h4>
   </div>
