--- a/Sports photography/index.html
+++ b/Sports photography/index.html
@@ -9,18 +9,22 @@
 <body>
 <div class="container">
   <div class="header">
-  	<h1>Sports photography</h1>
+  	<h3>Sports photography</h3>
   </div>
   <div class="nav">
     <h3> <a href="../index.html">Home</a> | <a href="../ecs/index.html">ECS</a> | <a href="index.html">sports photography</a></h3>
   </div>
   <div class="content"> <h3>Sports photography</h3>
   <h2>Acomplishments</h2>
-  <li>I have done photos fro skyline football</li>
+  <li>I have done photos fro skyline football.</li>
 	  
  <h2>People</h2>
-  <li>I like athletes and seeing really coo pictures of davante adams and anthony edwards</li>
-  
+  <li>I like athletes and seeing really coo pictures of davante adams and anthony edwards.</li>
+
+ <h2>Timeline</h2>
+   <li>the first time i really started liking sports and got the idea of sports phtography was
+   when i went to go see a SLC stars G leauge game and sat really close.</li>
+
   </div>
   <div class="footer">
     <h4> <a href="../aboutme.html">About Me</a> | <a href="mailto:9685704@graniteschools.org">Contact</a> | Copyright 2021</h4>
