--- a/Sports photography/index.html
+++ b/Sports photography/index.html
@@ -25,6 +25,8 @@
    <li>the first time i really started liking sports and got the idea of sports phtography was
    when i went to go see a SLC stars G leauge game and sat really close.</li>
 
+<h2>photos</h2>
+ <img src="../images/camera.png" alt="camera" width="960" >
   </div>
   <div class="footer">
     <h4> <a href="../aboutme.html">About Me</a> | <a href="mailto:9685704@graniteschools.org">Contact</a> | Copyright 2021</h4>
