--- a/Sports photography/index.html
+++ b/Sports photography/index.html
@@ -16,14 +16,14 @@
   </div>
   <div class="content"> <h3>Sports photography</h3>
   <h2>Acomplishments</h2>
-  <li>I have done photos fro skyline football.</li>
+  <li>I have done photos for skyline football.</li>
 	  
  <h2>People</h2>
-  <li>I like athletes and seeing really coo pictures of davante adams and anthony edwards.</li>
+  <li>I like athletes and seeing really cool pictures of Davante Adams and Anthony Edwards.</li>
 
  <h2>Timeline</h2>
-   <li>the first time i really started liking sports and got the idea of sports phtography was
-   when i went to go see a SLC stars G leauge game and sat really close.</li>
+   <li>The first time I really started liking sports and got the idea of sports photography was
+   when I went to go see a SLC stars G league game and sat really close.</li>
 
 <h2>photos</h2>
  <img src="../images/camera.png" alt="camera" width="960" >
