--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<!-- This is a comment! Text here will be ignored by the browser. -->
 	<meta charset="UTF-8">
 	<title>Atlas Schmutz ECS Portfolio</title>
-	<link rel="icon" type="image/
+	<link rel="icon" type="image/x-icon" href="/images/basketball.gif">
 	<link href="myCSS.css" rel="stylesheet" type="text/css">
 </head>
 <body>
