--- a/ecs/index.html
+++ b/ecs/index.html
@@ -18,6 +18,7 @@
 <h3>Typing results</h3>
 	  <img src="../images/typing.png" alt="Typing Test" width="960" >
 <h3>Coding projects</h3>
+	  <img src="../images/ssgame.png" alt="Game" width="960" >
 <h3>Certifications</h3>
   </div>
   <div class="footer">
